src/objects/npsp__Customizable_Rollup_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>npsp__CMT_API_Status__c</fullName>
        <description>Result of the last CustomMetadataType deployment</description>
        <inlineHelpText>JSON for the CMT deployment result
{ &quot;jobId&quot;: &quot;repsonse&quot; }</inlineHelpText>
        <label>CMT API Deployment Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Customizable_Rollups_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to enable the new NPSP Customizable Rollup Engine</inlineHelpText>
        <label>Enable Customizable Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Disable_Related_Records_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to prevent hard credit and soft credit rollups on Accounts and Contacts from only processing Account and Contact records that have existing related Opportunity or Opportunity Contact Role records.</inlineHelpText>
        <label>Disable Related Records Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Account_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Account object.</inlineHelpText>
        <label>Account Hard Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Account_SkewMode_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Account object using Skew Mode.</inlineHelpText>
        <label>Account Skew Mode Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Account_Soft_Credit_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating soft credit donor rollups to the Account object.</inlineHelpText>
        <label>Contact Soft Credit to Acct Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Contact_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the old and new Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating hard credit donor rollups to the Contact object.</inlineHelpText>
        <label>Contact Hard Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Contact_SkewMode_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the Contact object using Skew Mode.</inlineHelpText>
        <label>Contact Skew Mode Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Contact_Soft_Credit_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Used by the old and new Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating soft credit donor rollups to the Contact object.</inlineHelpText>
        <label>Contact Soft Credit Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_GAU_Batch_Size__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of records per batch to process when recalculating donor rollups to the General Accounting Unit object.</inlineHelpText>
        <label>GAU Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Limit_on_Attached_Opps_for_Skew__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>The maximum number of related Opportunities on an Account or Contact allowed in non-Skew Mode Rollup Batch Jobs. An Account or Contact with more than this number of related Opportunities will always be rolled up using Skew Mode.</inlineHelpText>
        <label>Skew Mode Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Rollups_Skew_Dispatcher_Batch_Size__c</fullName>
        <defaultValue>300</defaultValue>
        <description>Only used by the new Customizable Rollups engine</description>
        <inlineHelpText>Number of Account, Contact, or GAU records per batch to select for Skew Mode processing.</inlineHelpText>
        <label>Skew Mode Dispatcher Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customizable Rollup Settings</label>
</CustomObject>